--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,22 +25,33 @@ services:
     networks:
       - backend-network
 
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: backend-educatif
-    restart: always
-    env_file:
-      - .env
+#  backend:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    container_name: backend-educatif
+#    restart: always
+#    env_file:
+#      - .env
+#    depends_on:
+#      - postgres
+#      - temporal
+#    ports:
+#      - "3000:3000"
+#    networks:
+#      - backend-network
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "${PGADMIN_EMAIL}"
+      PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_PASSWORD}"
+    ports:
+      - "5050:80"
     depends_on:
       - postgres
-      - temporal
-    ports:
-      - "3000:3000"
     networks:
       - backend-network
-
 networks:
   backend-network:
 
