refactor(.env.backend): :art: change mdp and user for database

--- a/.env.backend
+++ b/.env.backend
@@ -8,6 +8,10 @@ PG_USER=postgres
 PG_PASSWORD=postgres
 
 # ----------------------------------------------------------------------
+#DATABASEURL
+# ----------------------------------------------------------------------
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/educatif_db"
+# ----------------------------------------------------------------------
 # JWT
 # ----------------------------------------------------------------------
 JWT_SECRET=CHANGE_WITH_A_STRONG_SECRET
@@ -18,3 +22,9 @@ JWT_EXPIRES_IN=3600s  # 1h, peut être 24h selon besoin
 # ----------------------------------------------------------------------
 TEMPORAL_NAMESPACE=default
 TEMPORAL_URL=temporal:7233
+
+# ----------------------------------------------------------------------
+# PGADMIN
+# ----------------------------------------------------------------------
+PGADMIN_EMAIL=admin@admin.com
+PGADMIN_PASSWORD=admin
