--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "migrate": "npx drizzle-kit generate && npx drizzle-kit migrate && tsx src/db/seed.ts"
   },
   "keywords": [],
   "author": "",
