--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "migrate": "npx drizzle-kit generate && npx drizzle-kit migrate"
+    "migrate": "npx drizzle-kit generate && npx drizzle-kit migrate",
+    "worker": "tsx src/temporal/worker.ts",
+    "client": "tsx src/temporal/client.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@temporalio/worker": "^1.11.8",
     "@temporalio/workflow": "^1.11.8",
     "@types/jsonwebtoken": "^9.0.9",
+    "axios": "^1.6.7",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -38,6 +41,7 @@
     "@types/pg": "^8.15.4",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/axios": "^0.14.0",
     "drizzle-kit": "^0.31.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.4",
