--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "migrate": "npx drizzle-kit generate && npx drizzle-kit migrate"
+    "migrate": "npx drizzle-kit generate && npx drizzle-kit migrate",
+    "worker": "tsx src/temporal/worker.ts",
+    "client": "tsx src/temporal/client.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@temporalio/worker": "^1.11.8",
     "@temporalio/workflow": "^1.11.8",
     "@types/jsonwebtoken": "^9.0.9",
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -25,6 +28,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
+    "readline": "^1.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
